--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "easy-peasy": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "styled-components": "^6.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
