--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,6 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "node",
     //  "allowImportingTsExtensions": true,
@@ -23,6 +22,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
+    "styled.d.ts",
     "vite.config.ts",
     ".eslintrc.cjs",
     "src"
